# LW_code_dimer

./: CMakeLists.txt  Code_idea.docx  Compute_Detector_reduced_density_matrix.cpp  Compute_sys_reduced_density_matrix.cpp  Detector.cpp  Full_system.cpp  Note about unit in our program.docx  README.md  System.cpp  auxiliary_function.cpp  compute_Nloc.cpp  exciton_vibrational_density.cpp  input_format.docx  main.cpp  quotient_state.h  resource_estimate.cpp  system.h  util.h  vanvlk_construct_detector_offdiag.cpp
MPI_Code/: Communication_function_MPI.cpp  Compute_Off_diagonal_full_system_MPI.cpp  Compute_Output_MPI.cpp  Detector_Evolve_MPI.cpp  Nonadiabatic_dimer_exciton_coupling.cpp  Read_MPI.cpp  System_Read_MPI.cpp  compute_detector_energy_window_MPI.cpp  construct_detector_MPI.cpp  construct_full_system_MPI.cpp  construct_quotient_state_MPI.cpp  full_system_evolve_MPI.cpp  save_load_detector_MPI.cpp  save_load_fullsystem_MPI.cpp
note/: usful_command.txt
